--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           python backend/app.py # проверяем что наш код запускается
 
-      - name: Deploy to Staging (optional)
+      - name: Deploy to Staging
+        env:
+          API_KEY: ${{ secrets.API_KEY }} # Пример Github Secrets
         run: |
-          echo "Deploying to staging..."  # Это пример шага для деплоя
+          echo "Deploying to staging with key $API_KEY..."  # Это пример шага для деплоя
