--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,35 +1,34 @@
 name: CI/CD Pipeline
 
-# Указываем, что нужно запускать workflow на пуши в основную ветку (main)
 on:
   push:
     branches:
-      - master # Запуск пайплайна при пуше в основную ветку
+      - master # if pushed to master launch pipeline
 
-# Определяем работу, которая будет выполняться в пайплайне
+# pipeline job definition
 jobs:
   build:
-    runs-on: ubuntu-latest # Выбираем виртуальную машину с Ubuntu
+    runs-on: ubuntu-latest # choosing ubuntu vm
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2 # Клонируем репозиторий
+        uses: actions/checkout@v2 # cloning repo
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.9" # Устанавливаем Python 3.9
+          python-version: "3.9" # installing Python 3.9
 
       - name: Install dependencies
         run: |
-          pip install -r backend/requirements.txt  # Устанавливаем зависимости из requirements.txt
+          pip install -r backend/requirements.txt  # installing dependencies from requirements.txt
 
       - name: Run code
         run: |
-          python backend/app.py # проверяем что наш код запускается
+          python backend/app.py # test that code runs
 
       - name: Deploy to Staging
         env:
-          API_KEY: ${{ secrets.API_KEY }} # Пример Github Secrets
+          API_KEY: ${{ secrets.API_KEY }} # Github Secrets example
         run: |
-          echo "Deploying to staging with key $API_KEY..."  # Это пример шага для деплоя
+          echo "Deploying to staging with key $API_KEY..."  # This will show *** instead of our secret
