--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,6 +3,6 @@ server {
 
     # Прокси-запросы на backend
     location / {
-        proxy_pass http://backend:8000;  # Прокси-сервер на backend контейнер
+        proxy_pass http://backend:8000;  # proxy to backend
     }
 }
